[package]
name = "tokio-zookeeper"
version = "0.2.1"

description = "Asynchronous client library for interacting with Apache ZooKeeper"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>", "Stackable GmbH <info@stackable.tech>"]

homepage = "https://github.com/jonhoo/tokio-zookeeper"
repository = "https://github.com/jonhoo/tokio-zookeeper.git"

keywords = ["zookeeper", "tokio", "asynchronous"]
categories = ["api-bindings", "asynchronous", "network-programming"]

license = "MIT/Apache-2.0"

edition = "2021"

[badges]
maintenance = { status = "experimental" }

[dependencies]
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["net", "rt", "time"] }
failure = "0.1.8"
byteorder = "1.5.0"
async-trait = "0.1.80"
pin-project = "1.1.5"
once_cell = "1.19.0"
tracing = "0.1.40"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
tracing-subscriber = "0.3.18"

[features]
