[package]
name = "tokio-zookeeper"
version = "0.4.0"

description = "Asynchronous client library for interacting with Apache ZooKeeper"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>", "Stackable GmbH <info@stackable.tech>"]

homepage = "https://github.com/jonhoo/tokio-zookeeper"
repository = "https://github.com/jonhoo/tokio-zookeeper.git"

keywords = ["zookeeper", "tokio", "asynchronous"]
categories = ["api-bindings", "asynchronous", "network-programming"]

license = "MIT/Apache-2.0"

edition = "2024"

[badges]
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.5.0"
futures = "0.3.31"
pin-project = "1.1.10"
snafu = "0.8.6"
tokio = { version = "1.47.1", features = ["net", "rt", "time"] }
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros"] }
tracing-subscriber = "0.3.19"

[features]
